# soundsible

./: .cursorrules  .gitignore  ADVANCED.md  AUTO_MODE_PLAN.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DISCOVERY_REWORK_PLAN.md  LICENSE  MVP.md  README.md  __init__.py  debug_search.py  download.py  gui.sh  package-lock.json  player.sh  pyproject.toml  recover_library.py  requirements.txt  run.py  soundsible.service  soundsible.service.template  soundsible_engine.py  start_launcher.py  start_web.sh  test_svc3.py  test_svc4.py  test_svc5.py
.gstack/: browse-audit.jsonl  browse.json
branding/: README.md
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
desktop-shell/: README.md  package-lock.json  package.json
desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop-shell/src-tauri/capabilities/: default.json
desktop-shell/src-tauri/icons/: icon.icns
desktop-shell/src-tauri/src/: engine.rs  lib.rs  main.rs  pairing.rs  state.rs  tray.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  CAR_INTEGRATION.md  CONFIGURATION.md  DESKTOP_BETA.md  INSTALL.md  LAYER_CONTRACTS.md  LEGAL.md  PREMIUM_QUALITY_CONTRACT.md  TELEMETRY_PRIVACY.md  UI_REBUILD_PLAN.md  appliance-rework-plan.md  discover-design-refs.md  yt-dlp-format-errors-log.md
launcher_web/: __init__.py  server.py
odst_tool/: .env.example  README.md  audio_utils.py  cloud_sync.py  config.py  downloader_cli.sh  downloader_gui.sh  downloader_web.sh  gui_app.py  itunes_provider.py  metadata_harmonizer.py  metadata_model.py  metadata_scorer.py  models.py  (+13 more)
(+471 files in other folders)
