[package]
name = "soundsible-desktop"
version = "0.1.0"
description = "Soundsible consumer desktop shell"
authors = ["Arzuparreta"]
edition = "2021"

[lib]
name = "soundsible_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "soundsible-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
dirs = "6"
thiserror = "2"
walkdir = "2"
url = "2"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
rfd = { version = "0.16", default-features = false }
